jNutWebAPI/pom.xml: avoid obsoleted <compilerArguments> in favour of <compilerArgs>
Signed-off-by: Jim Klimov <jimklimov+nut@gmail.com>