@@ -45,9 +45,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArguments>
-                        <endorseddirs>${endorsed.dir}</endorseddirs>
-                    </compilerArguments>
+                    <compilerArgs combine.children="append">
+                        <arg>-Djava.endorsed.dirs=${endorsed.dir}</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
